Fixed plugin dropdown alignment

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -185,8 +185,10 @@ select {
   }
 }
 
-.editor-label {
-  margin-top: 12px !important;
+.editor-label, .add-plugins-label {
+  display: flex;
+  flex-direction: column;
+  margin-top: 12px;
 }
 
 .floating-ribbons {
